2006-09-09 [colin]	0.10.2cvs17

	* src/gtkhtml2_viewer.c
		Implement zooming via Control+mouse wheel 

2006-09-09 [colin]	0.10.2cvs16

	* src/gtkhtml2_viewer.c
		Set minimum font size to our normal font size.
		Requires libgtkhtml > 2.11.0 (for now, CVS
		checkout more recent than Sep 9, 2006, 18:00 UTC)

2006-09-04 [colin]	0.10.2cvs15

	* src/gtkhtml2_viewer.c
		Fix crash when closing an external messageview 
		during load

2006-09-01 [wwp]	0.10.2cvs14

	* commitHelper
		sync w/ commitHelper in sylpheed-claws module:
		use CVSEDITOR env. var. if set.

2006-08-29 [colin]	0.10.2cvs13

	* src/gtkhtml2_viewer.c
		Valgrind fixes, implement scroll

2006-08-29 [paul]	0.10.2cvs12

	* .cvsignore
		remove references to pluginconfig.h(.in),
		the files ceased to exist

2006-08-28 [paul]	0.10.2cvs11

	* src/Makefile.am
	* src/gettext.h
	* src/gtkhtml2_viewer.c
		added missing gettext.h
		removed #include "pluginconfig.h"

2006-08-28 [paul]	0.10.2cvs10

	* configure.ac
	* po/Makefile.in.in
	* po/Makevars
	* po/POTFILES.in
	* po/fr.po
	* po/remove-potcdate.sin
	* src/Makefile.am
	* src/gtkhtml2_prefs.c
	* src/gtkhtml2_viewer.c
		require autoconf 2.60, enabling building
		with gettext 0.15 (gettext 0.14.x build still
		possible). Replace Makefiles with versions
		from gettext 0.15.
		Remove configure option --with-localedir. The
		option that is provided directly by autoconf
		2.60 can be used instead: --localedir
		Add missing files in po/
		All thanks to Colin

	* po/fr.po
		updated by Colin

2006-08-27 [colin]	0.10.2cvs9

	* src/gtkhtml2_viewer.c
		Implement plugin_provides()

2006-08-23 [colin]	0.10.2cvs8

	* configure.ac
	* src/gtkhtml2_viewer.c
		Implement get_selection(), which will return
		the selected text

2006-08-21 [colin]	0.10.2cvs7

	* src/gtkhtml2_prefs.c
	* src/gtkhtml2_prefs.h
	* src/gtkhtml2_viewer.c
		Implement image cache

2006-08-18 [paul]	0.10.2cvs6

	* configure.ac
		bump up GLib and GTK+ minimum required versions,
		following Claws
