@@ -21,3 +21,4 @@
 ( cvs diff -u -r 1.1.2.21 -r 1.1.2.22 src/gtkhtml2_viewer.c;  ) > 0.10.2cvs15.patchset
 ( cvs diff -u -r 1.1.2.22 -r 1.1.2.23 src/gtkhtml2_viewer.c;  ) > 0.10.2cvs16.patchset
 ( cvs diff -u -r 1.1.2.23 -r 1.1.2.24 src/gtkhtml2_viewer.c;  ) > 0.10.2cvs17.patchset
+( cvs diff -u -r 1.1.2.24 -r 1.1.2.25 src/gtkhtml2_viewer.c;  ) > 0.10.2cvs18.patchset
