@@ -1,3 +1,8 @@
+2006-09-10 [paul]	0.10.2cvs18
+
+	* src/gtkhtml2_viewer.c
+		fix compilation warnings
+
 2006-09-09 [colin]	0.10.2cvs17
 
 	* src/gtkhtml2_viewer.c
